<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:orientation="vertical"

    >

<androidx.cardview.widget.CardView
    android:layout_height="100dp"
    android:layout_width="match_parent"
    app:cardCornerRadius="10dp"
    android:layout_marginTop="10dp"
    android:layout_marginStart="2dp"
    android:layout_marginEnd="2dp"
    android:layout_marginBottom="5dp"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/productImage"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:src="@drawable/sales_pic_nobg" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/title"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:text="Item Title Goes Here"/>



            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dollar"
                    android:textColor="@color/black"
                    android:textStyle="bold"/>
                <TextView
                    android:id="@+id/price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:text="@string/price"
                    android:textStyle="bold"/>
            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/addToCart"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:text="@string/add_to_cart"
            android:backgroundTint="@color/light_black"
            android:layout_marginTop="60dp"
            android:layout_marginStart="5dp"/>
    </LinearLayout>
</androidx.cardview.widget.CardView>
</LinearLayout>