<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.example.ecom.ui.home.HomeViewModel" />
    </data>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="30dp">

                <LinearLayout
                    android:id="@+id/linearLayout3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <EditText
                        android:id="@+id/editTextTextPersonName2"
                        android:layout_width="0dp"
                        android:layout_height="48dp"
                        android:layout_marginTop="5dp"
                        android:layout_weight="1"
                        android:background="@drawable/edittext_background"
                        android:drawableStart="@drawable/ic_search"
                        android:drawablePadding="10dp"
                        android:ems="10"
                        android:hint="@string/searchbar_hint"
                        android:inputType="textPersonName"
                        android:padding="8dp"
                        android:textColor="@color/black"
                        android:textColorHint="@color/light_black"
                        android:autofillHints="" />


                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="10dp">

                        <com.google.android.material.floatingactionbutton.FloatingActionButton
                            android:id="@+id/floatingActionButton2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:layout_marginEnd="32dp"
                            android:backgroundTint="@color/black"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:srcCompat="@drawable/filter"
                            app:tint="@color/white"
                            tools:ignore="SpeakableTextPresentCheck"
                            android:contentDescription="@string/filter" />

                    </androidx.constraintlayout.widget.ConstraintLayout>
                </LinearLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/saleRecycler"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginTop="25dp"
                    android:orientation="horizontal"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/linearLayout3"
                    tools:listitem="@layout/sales_item"
                    android:clipToPadding="false"/>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/categoryRecycler"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginTop="20dp"
                    android:orientation="horizontal"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/saleRecycler"
                    tools:listitem="@layout/home_category_item"
                    android:clipToPadding="false"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="20dp">

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/popular_products"
                    android:textColor="#000000"
                    android:textSize="22sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.recyclerview.widget.RecyclerView

                    android:id="@+id/popular_products_recycler"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    tools:listitem="@layout/product_item"
                    android:clipToPadding="false"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView8"
                    android:layout_marginTop="20dp"
                    android:orientation="horizontal"/>
            </androidx.constraintlayout.widget.ConstraintLayout>
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="30dp"
                android:layout_marginTop="20dp">

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/all_products"
                    android:textColor="#000000"
                    android:textSize="22sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/sale_products_recycler"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    tools:listitem="@layout/product_item"
                    listData="@{viewModel.products}"
                    android:layout_marginTop="20dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    android:orientation="horizontal"
                    app:layout_constraintTop_toBottomOf="@+id/textView5"
                    />
            </androidx.constraintlayout.widget.ConstraintLayout>
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                storeApiStatus="@{viewModel.status}"
                android:contentDescription="IMAGE" />
        </LinearLayout>

    </ScrollView>

</layout>